# Devector

./: .gitignore  CMakeLists.txt  Devector.sln  DevectorWPF.sln  README.md
.github/workflows/: build-release.yml
Devector/: Breakpoint.cpp  Breakpoint.h  Debugger.cpp  Debugger.h  Devector.vcxproj  Devector.vcxproj.filters  Display.cpp  Display.h  Hardware.cpp  Hardware.h  I8080.cpp  I8080.h  IO.cpp  IO.h  Keyboard.cpp  Keyboard.h  Memory.cpp  Memory.h  Types.h  Watchpoint.cpp  Watchpoint.h  consts.h  devectorApp.cpp  devectorApp.h  imgui.ini  main.cpp  settings.json
Devector/Core/: Audio.cpp  Audio.h  Breakpoint.cpp  Breakpoint.h  Breakpoints.cpp  Breakpoints.h  CpuI8080.cpp  CpuI8080.h  Debugger.cpp  Debugger.h  Disasm.cpp  Disasm.h  Display.cpp  Display.h  FDC1793.h  Fdc1793.cpp  Fdcc1793.cpp  Fdcc1793.h  FileSystemImage.cpp  FileSystemImage.h  Hardware.cpp  Hardware.h  I8080.h  I8080Cpu.cpp  I8080Cpu.h  I8253Timer.cpp  I8253Timer.h  IO.cpp  IO.h  Keyboard.cpp  Keyboard.h  Memory.cpp  Memory.h  PitI8253.h  Recorder.cpp  Recorder.h  Reverse.cpp  Reverse.h  Sound.cpp  Sound.h  (+8 more)
Devector/UI/: AboutWindow.cpp  AboutWindow.h  BaseWindow.cpp  BaseWindow.h  BreakpointsWindow.cpp  BreakpointsWindow.h  DisasmWindow.cpp  DisasmWindow.h  DisplayWindow.cpp  DisplayWindow.h  FeedbackWindow.cpp  FeedbackWindow.h  HardwareStatsWindow.cpp  HardwareStatsWindow.h  HexViewerWindow.cpp  HexViewerWindow.h  MemDisplayWindow.cpp  MemDisplayWindow.h  MemViewerWindow.cpp  MemViewerWindow.h  RecorderWindow.cpp  RecorderWindow.h  TraceLogWindow.cpp  TraceLogWindow.h  WatchpointsWindow.cpp  WatchpointsWindow.h
Devector/Utils/: ArgsParser.h  Consts.h  GLUtils.cpp  GLUtils.h  ImGuiApp.cpp  ImGuiApp.h  ImGuiUtils.cpp  ImGuiUtils.h  JsonUtils.cpp  JsonUtils.h  Result.h  StrUtils.cpp  StrUtils.h  StringUtils.cpp  StringUtils.h  TQueue.h  Types.h  Utils.cpp  Utils.h  telegramBot.cpp  telegramBot.h
Rom/: ADSKOK#_.ROM  ADSKOK_.ROM  adskok_jps.rom  adskokim.rom  adskokin.rom  exolon.json  river_raid.rom
Rom/fdd/: badaps.fdd
Rom/games/: exolon.json  vetka.fdd
Rom/timing_tests/: tiedye2.rom
Rom/v_tests/: clrspace.rom  test512.rom
SharedSource/Core/: Breakpoint.cpp  Breakpoint.h  Breakpoints.cpp  Breakpoints.h  DebugData.cpp  DebugData.h  Debugger.cpp  Debugger.h  Display.h  FDC1793.h  Fdc1793.cpp  IO.h  Keyboard.cpp  Memory.h  SoundAY8910.cpp  TimerI8253.cpp  Watchpoint.cpp  Watchpoints.cpp  Watchpoints.h
SharedSource/UI/: BaseWindow.h  BreakpointsWindow.cpp  BreakpointsWindow.h  DisplayWindow.cpp  DisplayWindow.h  MemDisplayWindow.cpp  MemDisplayWindow.h  MemViewerWindow.cpp  MemViewerWindow.h  RamViewWindow.cpp  RamViewWindow.h  WatchpointsWindow.cpp  WatchpointsWindow.h
SharedSource/Utils/: ArgsParser.cpp  BaseWindow.cpp  BaseWindow.h  Consts.h  GLUtils.cpp  GLUtils.h  ImGuiApp.cpp  ImGuiApp.h  ImGuiUtils.cpp  ImGuiUtils.h  Status.h  TQueue.h  Utils.cpp  Utils.h
SharedSource/ui/: baseWindow.cpp  baseWindow.h  disasmWindow.cpp  disasmWindow.h  hardwareStatsWindow.cpp  hardwareStatsWindow.h  imGuiApp.cpp  imGuiApp.h  imGuiUtils.cpp  imGuiUtils.h
SharedSource/utils/: argsParser.cpp  argsParser.h  globals.h  jsonUtils.cpp  jsonUtils.h  result.h  status.h  stringUtils.cpp  stringUtils.h  utils.cpp  utils.h
Temp/: Devector.bat  settings.json
bin - Copy/: imgui.ini  settings.json
projects/devector/src/: main.cpp  my_lib.cpp  my_lib.h
resources/: imgui.ini  settings.json
resources/boot/: boots.txt
rom/: .saved.fdd  GameNoname.rom  GameNoname_eng.json  GameNoname_eng.rom  SpriteRendering.rom  badaps.nfo  bytecode_generator.py  debugcode.txt  dirimage.fdd  helv06c.rom  ramdisk_test.ROM  star.rom  test_ustroistv.rom  vetka - Copy.fdd
rom/beeper/: gtoc64.rom  hvphas.rom  music.txt  phphunk.rom  pirat.rom  readme.txt  rock.rom  rublov.rom
rom/fdd/: Robotz65a.fdd  Robotz66a - Copy.fdd  Robotz66a.fdd  galery.fdd  galery.txt  out1.fdd
rom/games/: GameNoname_eng.json  GameNoname_labels.txt  GameNoname_rus.rom  exolon.json  maric.json  maric.rom  ot.rom  vetka - Copy.fdd
rom/not_working/: b-ice.fdd  pillars.rom
rom/scrltst2/: README.txt
rom/timing_tests/: b-ice.com  b-ice.xor  hwdit512.rom  kittham1.rom  sunsetb.rom
rom/v_tests/: bord.rom  vstvi53.rom
shared_src/: README.txt
shared_src/core/: breakpoint.cpp  breakpoint.h  breakpoints.cpp  cpu_i8080.h  debug_data.cpp  debug_data.h  disasm.cpp  disasm.h  display.h  fdc_wd1793.cpp  hardware.cpp  io.cpp  keyboard.cpp  keyboard.h  memory.cpp  trace_log.cpp
shared_src/utils/: consts.h  glu_utils.cpp  glu_utils.h  imgui_app.cpp  imgui_app.h  imgui_utils.cpp  imgui_utils.h  json_utils.cpp  types.h  utils.cpp  utils.h
src/core/: audio.cpp  audio.h  breakpoint.cpp  breakpoint.h  breakpoints.cpp  breakpoints.h  code_perf.h  cpu_i8080.cpp  cpu_i8080.h  debug_data.cpp  debug_data.h  debugger.cpp  debugger.h  disasm.cpp  disasm.h  disasm_i8080_cmds.h  disasm_z80_cmds.h  display.cpp  display.h  fdc_wd1793.cpp  fdc_wd1793.h  fdd_consts.h  hardware.cpp  hardware.h  hardware_consts.h  io.cpp  io.h  keyboard.cpp  keyboard.h  memory.cpp  memory.h  memory_consts.h  memory_edit.h  recorder.cpp  recorder.h  script.cpp  script.h  scripts.cpp  scripts.h  sound_ay8910.cpp  (+8 more)
src/devector/: devector_app.cpp  devector_app.h  imgui_app.cpp  imgui_app.h  main.cpp  main_test.cpp
src/devector/ui/: about_window.cpp  about_window.h  base_window.cpp  base_window.h  breakpoints_window.cpp  breakpoints_window.h  disasm_window.cpp  disasm_window.h  display_window.cpp  display_window.h  feedback_window.cpp  feedback_window.h  hardware_stats_window.cpp  hardware_stats_window.h  hex_viewer_window.cpp  hex_viewer_window.h  keyboard_window.cpp  keyboard_window.h  mem_display_window.cpp  mem_display_window.h  (+6 more)
src/main_imgui/: version.h.in
src/utils/: args_parser.cpp  args_parser.h  consts.h  gl_utils.cpp  gl_utils.h  glu_utils.cpp  glu_utils.h  history.h  imgui_app.cpp  imgui_app.h  imgui_utils.cpp  imgui_utils.h  json_utils.cpp  json_utils.h  result.h  str_utils.cpp  str_utils.h  tqueue.h  types.h  utils.cpp  utils.h  win_gl_utils.cpp  win_gl_utils.h
(+138 files in other folders)
